--- a/index.html
+++ b/index.html
@@ -5,155 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Dashboard</title>
-    <style>
-        :root {
-            --dark-bg: #2a2a2e;
-            --dark-text: #f9f9fa;
-            --dark-accent: #45a1ff;
-            --dark-border: #3a3a3f;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            background-color: var(--dark-bg);
-            color: var(--dark-text);
-            margin: 0;
-            padding: 20px;
-        }
-
-        .container {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-
-        .column {
-            flex: 1;
-            min-width: 300px;
-            background: #36363a;
-            border-radius: 8px;
-            padding: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section h2 {
-            color: var(--dark-accent);
-            margin-top: 0;
-            font-size: 1.2em;
-            border-bottom: 2px solid var(--dark-border);
-            padding-bottom: 5px;
-        }
-
-        .links {
-            list-style: none;
-            padding: 0;
-        }
-
-        .links a {
-            color: var(--dark-text);
-            text-decoration: none;
-            display: block;
-            padding: 8px;
-            margin: 5px 0;
-            border-radius: 4px;
-            transition: background 0.2s;
-        }
-
-        .links a:hover {
-            background: var(--dark-border);
-        }
-
-        .edit-mode .section,
-        .edit-mode .links li {
-            position: relative;
-            padding: 10px;
-            border: 1px dashed #45a1ff;
-            margin: 5px 0;
-        }
-
-        .edit-controls {
-            position: absolute;
-            right: 5px;
-            top: 5px;
-        }
-
-        .edit-btn {
-            background: #45a1ff;
-            color: white;
-            border: none;
-            padding: 8px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-bottom: 15px;
-        }
-
-        .edit-form {
-            background: #36363a;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 6px;
-        }
-
-        .edit-form input {
-            background: #2a2a2e;
-            border: 1px solid #3a3a3f;
-            color: white;
-            padding: 6px;
-            margin: 5px;
-            border-radius: 4px;
-        }
-
-        .edit-form button {
-            background: #45a1ff;
-            color: white;
-            border: none;
-            padding: 6px 12px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .header-controls {
-            margin-bottom: 20px;
-            display: flex;
-            gap: 10px;
-        }
-
-        .save-btn {
-            background: #4CAF50 !important;
-            color: rgb(14, 4, 4);
-            border: none;
-            padding: 8px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-bottom: 15px;
-        }
-
-        .edit-mode .save-btn {
-            display: inline-block !important;
-        }
-
-        #saveBtn {
-            display: none;
-        }
-
-        .favicon {
-            width: 16px;
-            height: 16px;
-            margin-right: 8px;
-            vertical-align: middle;
-            filter: invert(1);
-            /* Make white icons visible on dark background */
-        }
-
-        .links a {
-            display: flex;
-            align-items: center;
-        }
-    </style>
+    <script type="text/javascript" src="index.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -162,248 +15,6 @@
         <button class="save-btn" id="saveBtn" onclick="saveConfig()" style="display: none;">Save Changes</button>
     </div>
     <div class="container" id="columns"></div>
-
-    <script>
-        let isEditMode = false;
-        let currentConfig = {};
-
-        // Toggle edit mode
-        function toggleEditMode() {
-            isEditMode = !isEditMode;
-            document.body.classList.toggle('edit-mode', isEditMode);
-            document.getElementById('saveBtn').style.display = isEditMode ? 'inline-block' : 'none';
-            document.getElementById('toggleEditBtn').textContent = isEditMode ? 'Exit Edit Mode' : 'Edit Mode';
-            renderDashboard();
-        }
-
-        // Update the saveConfig function to handle errors
-        async function saveConfig() {
-            try {
-                const response = await fetch('/save', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(currentConfig)
-                });
-
-                if (!response.ok) throw new Error('Save failed');
-                alert('Configuration saved successfully!');
-            } catch (error) {
-                alert('Error saving configuration: ' + error.message);
-            }
-        }
-
-        // Fetch and render config
-        async function loadConfig() {
-            const response = await fetch('/config');
-            currentConfig = await response.json();
-            renderDashboard();
-        }
-
-        // Render the dashboard
-        function renderDashboard() {
-            const container = document.getElementById('columns');
-            container.innerHTML = '';
-
-            currentConfig.columns.forEach((column, colIndex) => {
-                const columnDiv = document.createElement('div');
-                columnDiv.className = 'column';
-
-                // Add column controls
-                if (isEditMode) {
-                    const colControls = document.createElement('div');
-                    colControls.innerHTML = `
-                        <button onclick="addSection(${colIndex})">+ Section</button>
-                        <button onclick="deleteColumn(${colIndex})">×</button>
-                    `;
-                    columnDiv.appendChild(colControls);
-                }
-
-                column.sections.forEach((section, secIndex) => {
-                    const sectionDiv = document.createElement('div');
-                    sectionDiv.className = 'section';
-
-                    // Section header with controls
-                    const heading = document.createElement('h2');
-                    if (isEditMode) {
-                        heading.innerHTML = `
-                            <input value="${section.title}" 
-                                   onchange="updateSectionTitle(${colIndex}, ${secIndex}, this.value)">
-                            <div class="edit-controls">
-                                <button onclick="deleteSection(${colIndex}, ${secIndex})">×</button>
-                            </div>
-                        `;
-                    } else {
-                        heading.textContent = section.title;
-                    }
-
-                    // Links list
-                    const linksList = document.createElement('ul');
-                    linksList.className = 'links';
-
-                    section.links.forEach((link, linkIndex) => {
-                        const listItem = document.createElement('li');
-                        if (isEditMode) {
-                            listItem.innerHTML = `
-                                <input value="${link.name}" 
-                                       onchange="updateLinkName(${colIndex}, ${secIndex}, ${linkIndex}, this.value)">
-                                <input value="${link.url}" 
-                                       onchange="updateLinkUrl(${colIndex}, ${secIndex}, ${linkIndex}, this.value)">
-                                <button onclick="deleteLink(${colIndex}, ${secIndex}, ${linkIndex})">×</button>
-                            `;
-                        } else {
-                            const anchor = document.createElement('a');
-                            anchor.href = link.url;
-
-                            // Create favicon image
-                            const favicon = document.createElement('img');
-                            favicon.className = 'favicon';
-                            favicon.alt = '';
-                            var html = getHTMLbyURL(link.url);
-                            console.log(html);
-                            favicon.src = getFaviconUrlFromHtml();
-
-                            // Handle favicon loading errors
-                            favicon.onerror = function () {
-                                this.src = 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAAAsQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAAkSURBVDiN7cuxDQAwDASx+zfdQYoUKVKkSJHiz0H+7gKgAAMAegQNAOATRuEAAAAASUVORK5CYII=';
-                            };
-
-                            anchor.appendChild(favicon);
-                            anchor.appendChild(document.createTextNode(link.name));
-                            listItem.appendChild(anchor);
-                        }
-                        linksList.appendChild(listItem);
-                    });
-
-                    // Add link button
-                    if (isEditMode) {
-                        const addLinkBtn = document.createElement('button');
-                        addLinkBtn.textContent = '+ Add Link';
-                        addLinkBtn.onclick = () => addLink(colIndex, secIndex);
-                        linksList.appendChild(addLinkBtn);
-                    }
-
-                    sectionDiv.appendChild(heading);
-                    sectionDiv.appendChild(linksList);
-                    columnDiv.appendChild(sectionDiv);
-                });
-
-                container.appendChild(columnDiv);
-            });
-
-            // Add column button
-            if (isEditMode) {
-                const addColBtn = document.createElement('button');
-                addColBtn.textContent = '+ Add Column';
-                addColBtn.onclick = addColumn;
-                container.appendChild(addColBtn);
-            }
-        }
-        function getFaviconUrl(url) {
-            try {
-                const parsedUrl = new URL(url);
-                console.log(parsedUrl.hostname);
-                return `${parsedUrl.protocol}//${parsedUrl.hostname}/favicon.ico`;
-            } catch {
-                return `https://www.google.com/s2/favicons?domain=${encodeURIComponent(url)}`;
-            }
-        }
-        // Data manipulation functions
-        function addColumn() {
-            currentConfig.columns.push({ sections: [] });
-            renderDashboard();
-        }
-
-        function deleteColumn(colIndex) {
-            currentConfig.columns.splice(colIndex, 1);
-            renderDashboard();
-        }
-
-        function addSection(colIndex) {
-            currentConfig.columns[colIndex].sections.push({
-                title: "New Section",
-                links: []
-            });
-            renderDashboard();
-        }
-
-        function deleteSection(colIndex, secIndex) {
-            currentConfig.columns[colIndex].sections.splice(secIndex, 1);
-            renderDashboard();
-        }
-
-        function addLink(colIndex, secIndex) {
-            currentConfig.columns[colIndex].sections[secIndex].links.push({
-                name: "New Link",
-                url: "#"
-            });
-            renderDashboard();
-        }
-
-        function updateSectionTitle(colIndex, secIndex, value) {
-            currentConfig.columns[colIndex].sections[secIndex].title = value;
-        }
-
-        function updateLinkName(colIndex, secIndex, linkIndex, value) {
-            currentConfig.columns[colIndex].sections[secIndex].links[linkIndex].name = value;
-        }
-
-        function updateLinkUrl(colIndex, secIndex, linkIndex, value) {
-            currentConfig.columns[colIndex].sections[secIndex].links[linkIndex].url = value;
-        }
-
-        function deleteLink(colIndex, secIndex, linkIndex) {
-            currentConfig.columns[colIndex].sections[secIndex].links.splice(linkIndex, 1);
-            renderDashboard();
-        }
-
-        // Save configuration
-        async function saveConfig() {
-            await fetch('/save', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(currentConfig)
-            });
-            alert('Configuration saved!');
-        }
-        function getFaviconUrlFromHtml(html) {
-            // Create a DOM parser to parse the HTML string
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(html, 'text/html');
-
-            // Look for a link tag with rel="icon" or rel="shortcut icon"
-            const faviconLink = doc.querySelector('link[rel="icon"], link[rel="shortcut icon"]');
-
-            // Return the href attribute value if the link tag is found
-            return faviconLink ? faviconLink.href : null;
-        }
-        function makeHttpObject() {
-            if ('XMLHttpRequest' in window)
-                return new XMLHttpRequest();
-            else if ('ActiveXObject' in window)
-                return new ActiveXObject('Msxml2.XMLHTTP');
-        }
-
-        async function getHTMLbyURL(url) {
-            var response = await fetch(url);
-            switch (response.status) {
-                // status "OK"
-                case 200:
-                    var template = await response.text();
-
-                    console.log(template);
-                    break;
-                // status "Not Found"
-                case 404:
-                    console.log('Not Found');
-                    break;
-            }
-        };
-
-
-
-        // Initialize
-        loadConfig();
-    </script>
 </body>
 
 </html>
